overflow bug fixed

--- a/src/App.css
+++ b/src/App.css
@@ -67,3 +67,18 @@
 .button:active {
   scale: 1;
 }
+.fade-in {
+  animation: fadeInAnimation 1.5s ease-in forwards;
+}
+
+@keyframes fadeInAnimation {
+  from {
+    opacity: 0;
+    transform: translateY(80px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
